@@ -8,6 +8,7 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.regex.Matcher;
@@ -19,6 +20,7 @@ import javax.mail.Message;
 import javax.mail.MessagingException;
 import javax.mail.internet.MimeMultipart;
 
+import com.oracle.tools.packager.IOUtils;
 import com.sun.mail.util.BASE64DecoderStream;
 
 import de.wesim.imapnotes.HasLogger;
@@ -29,20 +31,16 @@ public class IMAPUtils implements HasLogger {
 //	Aug. 05, 2018 9:04:36 NACHM. de.wesim.imapnotes.services.IMAPUtils decodeMultipartMails
 //	INFORMATION: Index: 1, Content-Type: image/tiff; x-unix-mode=0644; name=image.tiff, Filename: image.tiff, Content-Id: [<36F2F33F-7B37-4FC6-A109-85B4E77F52BD@localdomain>]
 
-	private static Pattern p = Pattern.compile("<object type.*?></object>");
+	private static Pattern p = Pattern.compile( "<object type=\\\".*?\\\" data=\\\"(.*?)\\\"></object>" );
 
 	
-	public byte[] convertTIFF2Jpeg(byte[] tiffImage) {
+	public byte[] convertTIFF2Jpeg(byte[] tiffImage) throws IOException {
 		try (InputStream tiffIS = new ByteArrayInputStream(tiffImage);
 				ByteArrayOutputStream pngOS = new ByteArrayOutputStream()	
 				) {
 			final BufferedImage tiff = ImageIO.read(tiffIS);
 			ImageIO.write(tiff, "png", pngOS);
 			return pngOS.toByteArray();
-		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			return null;
 		}
 		
 	}
@@ -54,8 +52,7 @@ public class IMAPUtils implements HasLogger {
 		getLogger().info("Content type: {}", message.getContentType());
 		String mainContent = "";
 		// TODO Später mal die Bilder auflösen ...
-		String base64Content = "";
-		Map<String, String> cidContentMap = new HashMap<>();
+		final Map<String, String> cidContentMap = new HashMap<>();
 		final MimeMultipart multiPart = (MimeMultipart) message.getContent();
 		for (int i=0; i<multiPart.getCount();i++) {
 			BodyPart bp = multiPart.getBodyPart(i);
@@ -67,35 +64,31 @@ public class IMAPUtils implements HasLogger {
 				mainContent = (String) partContent;
 			} else if (partContent instanceof com.sun.mail.util.BASE64DecoderStream) {
 				final String cid = cids[0];
-				BASE64DecoderStream decoderStream = (com.sun.mail.util.BASE64DecoderStream) partContent;
-				byte[] originalContent = decoderStream.readAllBytes();
-				// TODO TIFF konvertieren
-				String pngBase64 = "";
-				//getLogger().info("{}", partContent.getClass().getName());
-				// TODO CIDs auflösen
-				// TODO Konvertieren nach PNG
-//				ByteArrayOutputStream bos = new ByteArrayOutputStream();
-//				bp.getDataHandler().writeTo(bos);
-//				bos.close();
-//				byte[] bytes = bos.toByteArray();
-//				String read = new String(Files.readAllBytes(Paths.get("/Users/christian/some-content.base64")));
-				//Files.write(Paths.get("/Users/christian/some-content"), bytes);
-				// src="data:image/png;base64,iVBOR…Fy/NYpbmRyKWAAAAAElFTkSuQmCC"
-				// base64Content = "<img src=\"data:image/jpeg;base64," 
-				// 	+ Base64.getEncoder().encodeToString(bytes) + "\"/>";
-				base64Content = "<img src=\"data:image/png;base64," + pngBase64 + "\"/>";
-				cidContentMap.put(cid, base64Content);
+				try (BASE64DecoderStream decoderStream = (com.sun.mail.util.BASE64DecoderStream) partContent;
+						ByteArrayOutputStream buffer = new ByteArrayOutputStream();)	{
+					
+					int nRead;
+					byte[] data = new byte[16384];
+					while ((nRead = decoderStream.read(data, 0, data.length)) != -1) {
+					  buffer.write(data, 0, nRead);
+					}
+					buffer.flush();
+					byte[] originalContent = buffer.toByteArray();
+					byte[] convertedCrap = convertTIFF2Jpeg(originalContent);
+					final String pngBase64 = Base64.getEncoder().encodeToString(convertedCrap);
+					final String base64Content = "<img src=\"data:image/png;base64," + pngBase64 + "\"/>";
+					cidContentMap.put(cid, base64Content);
+				}
 			}
-
-			getLogger().info("Content: {}", partContent);
 		}
 		getLogger().info("ReturnMe:{}", mainContent);
-
+		getLogger().info("{}", cidContentMap);
 		Matcher m = p.matcher(mainContent);
 		if (m.find()) {
 			getLogger().info("Found!");
 			// TODO CIDs integrieren
-			mainContent = m.replaceAll(base64Content);
+			final String newContent = cidContentMap.values().iterator().next();
+			mainContent = m.replaceAll(newContent);
 		}
 		return mainContent;
 		// <img src="data:image/jpg;base64,/*base64-data-string here*/" />
